cmake_minimum_required(VERSION 3.15)
project(Cplusplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(_0003_main _0003_Longest_Substring_Without_Repeating_Characters/_0003_main.cpp)
add_executable(_0088_main _0088_Merge_Sorted_Array/_0088_main.cpp)
add_executable(_0239_main _0239_Sliding_Window_Maximum/_0239_main.cpp)
add_executable(_0239_main2 _0239_Sliding_Window_Maximum/_0239_main2.cpp)
add_executable(_0001_main _0001_Two_Sum/_0001_main.cpp)
add_executable(_0605_main _0605_Can_Place_Flowers/_0605_main.cpp)
add_executable(_0086_main _0086_Partition_List/_0086_main.cpp)
add_executable(_0002_main _0002_Add_Two_Numbers/_0002_main.cpp)
add_executable(_0509_main _0509_Fibonacci_Number/_0509_main.cpp)
add_executable(_0004_main _0004_Median_of_Two_Sorted_Arrays/_0004_main.cpp)
add_executable(_0005_main _0005_Longest_Palindromic_Substring/_0005_main.cpp)
add_executable(_0006_main _0006_ZigZag_Conversion/_0006_main.cpp)
add_executable(_0007_main _0007_Reverse_Integer/_0007_main.cpp)
add_executable(_0008_main _0008_String_to_Integer_atoi/_0008_main.cpp)
add_executable(_0009_main _0009_Palindrome_Number/_0009_main.cpp)
add_executable(_0009_main2 _0009_Palindrome_Number/_0009_main2.cpp)
add_executable(_0010_main _0010_Regular_Expression_Matching/_0010_main.cpp)
add_executable(_0830_main _0830_Positions_of_Large_Groups/_0830_main.cpp)
add_executable(Output _0000_study/_common/Output.cpp)
add_executable(_0031_main _0031_Next_Permutation/_0031_main.cpp)
add_executable(_0032_main _0032_Longest_Valid_Parentheses/_0032_main.cpp)
add_executable(_0033_main _0033_Search_in_Rotated_Sorted_Array/_0033_main.cpp)
add_executable(_0034_main _0034_Find_First_and_Last_Position_of_Element_in_Sorted_Array/_0034_main.cpp)
add_executable(_0035_main _0035_Search_Insert_Position/_0035_main.cpp)
add_executable(_0036_main _0036_Valid_Sudoku/_0036_main.cpp)
add_executable(_0037_main _0037_Sudoku_Solver/_0037_main.cpp)
add_executable(_0399_main _0399_Evaluate_Division/_0399_main.cpp)
add_executable(_0038_main _0038_Count_and_Say/_0038_main.cpp)
add_executable(_0039_main _0039_Combination_Sum/_0039_main.cpp)
add_executable(_0040_main _0040_Combination_Sum_II/_0040_main.cpp)
add_executable(_0547_main _0547_Number_of_Provinces/_0547_main.cpp)
add_executable(_0189_main _0189_Rotate_Array/_0189_main.cpp)
add_executable(_0121_main _0121_Best_Time_to_Buy_and_Sell_Stock/_0121_main.cpp)
add_executable(_0122_main _0122_Best_Time_to_Buy_and_Sell_Stock_II/_0122_main.cpp)
add_executable(_0123_main _0123_Best_Time_to_Buy_and_Sell_Stock_III/_0123_main.cpp)
add_executable(_0188_main _0188_Best_Time_to_Buy_and_Sell_Stock_IV/_0188_main.cpp)
add_executable(_0309_main _0309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown/_0309_main.cpp)
add_executable(_0228_main _0228_Summary_Ranges/_0228_main.cpp)
add_executable(_1202_main _1202_Smallest_String_With_Swaps/_1202_main.cpp)
add_executable(_1203_main _1203_Sort_Items_by_Groups_Respecting_Dependencies/_1203_main.cpp)
add_executable(_684_main _0684_Redundant_Connection/_684_main.cpp)
add_executable(_1018_main _1018_Binary_Prefix_Divisible_By_5/_1018_main.cpp)
add_executable(_0947_main _0947_Most_Stones_Removed_with_Same_Row_or_Column/_0947_main.cpp)
add_executable(_0803_main _0803_Bricks_Falling_When_Hit/_0803_main.cpp)
add_executable(_1232_main _1232_Check_If_It_Is_a_Straight_Line/_1232_main.cpp)
add_executable(_0101_main _0101_Symmetric_Tree/_0101_main.cpp)
add_executable(_0102_main _0102_Binary_Tree_Level_Order_Traversal/_0102_main.cpp)
add_executable(_0103_main _0103_Binary_Tree_Zigzag_Level_Order_Traversal/_0103_main.cpp)
add_executable(_0104_main _0104_Maximum_Depth_of_Binary_Tree/_0104_main.cpp)
add_executable(_0105_main _0105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal/_0105_main.cpp)
add_executable(_0106_main _0106_Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal/_0106_main.cpp)
add_executable(_0107_main _0107_Binary_Tree_Level_Order_Traversal_II/_0107_main.cpp)
add_executable(_0108_main _0108_Convert_Sorted_Array_to_Binary_Search_Tree/_0108_main.cpp)
add_executable(_0109_main _0109_Convert_Sorted_List_to_Binary_Search_Tree/_0109_main.cpp)
add_executable(_0110_main _0110_Balanced_Binary_Tree/_0110_main.cpp)
add_executable(_0721_main _0721_Accounts_Merge/_0721_main.cpp)
add_executable(_1584_main _1584_Min_Cost_to_Connect_All_Points/_1584_main.cpp)
add_executable(_0628_main _0628_Maximum_Product_of_Three_Numbers/_0628_main.cpp)
add_executable(_1489_main _1489_Find_Critical_and_Pseudo_Critical_Edges_in_Minimum_Spanning_Tree/_1489_main.cpp)
add_executable(_0989_main _0989_Add_to_Array_Form_of_Integer/_0989_main.cpp)
add_executable(_0151_main _0151_Reverse_Words_in_a_String/_0151_main.cpp)
add_executable(_0152_main _0152_Maximum_Product_Subarray/_0152_main.cpp)
add_executable(_0153_main _0153_Find_Minimum_in_Rotated_Sorted_Array/_0153_main.cpp)
add_executable(_0154_main _0154_Find_Minimum_in_Rotated_Sorted_Array_II/_0154_main.cpp)
add_executable(_0155_main _0155_Min_Stack/_0155_main.cpp)
add_executable(_0160_main _0160_Intersection_of_Two_Linked_Lists/_0160_main.cpp)
add_executable(_0164_main _0164_Maximum_Gap/_0164_main.cpp)
add_executable(_0162_main _0162_Find_Peak_Element/_0162_main.cpp)
add_executable(_0165_main _0165_Compare_Version_Numbers/_0165_main.cpp)
add_executable(_0166_main _0166_Fraction_to_Recurring_Decimal/_0166_main.cpp)
add_executable(_1319_main _1319_Number_of_Operations_to_Make_Network_Connected/_1319_main.cpp)
add_executable(_0674_main _0674_Longest_Continuous_Increasing_Subsequence/_0674_main.cpp)
add_executable(_0959_main _0959_Regions_Cut_By_Slashes/_0959_main.cpp)
add_executable(_0091_main _0091_Decode_Ways/_0091_main.cpp)
add_executable(_0092_main _0092_Reverse_Linked_List_II/_0092_main.cpp)
add_executable(_0093_main _0093_Restore_IP_Addresses/_0093_main.cpp)
add_executable(_0094_main _0094_Binary_Tree_Inorder_Traversal/_0094_main.cpp)
add_executable(_0095_main _0095_Unique_Binary_Search_Trees_II/_0095_main.cpp)
add_executable(_0096_main _0096_Unique_Binary_Search_Trees/_0096_main.cpp)
add_executable(_0097_main _0097_Interleaving_String/_0097_main.cpp)
add_executable(_0098_main _0098_Validate_Binary_Search_Tree/_0098_main.cpp)
add_executable(_0100_main _0100_Same_Tree/_0100_main.cpp)
add_executable(_0131_main _0131_Palindrome_Partitioning/_0131_main.cpp)
add_executable(_0132_main _0132_Palindrome_Partitioning_II/_0132_main.cpp)
add_executable(_0133_main _0133_Clone_Graph/_0133_main.cpp)
add_executable(_0134_main _0134_Gas_Station/_0134_main.cpp)
add_executable(_0135_main _0135_Candy/_0135_main.cpp)
add_executable(_0136_main _0136_Single_Number/_0136_main.cpp)
add_executable(_1128_main _1128_Number_of_Equivalent_Domino_Pairs/_1128_main.cpp)
add_executable(_0137_main _0137_Single_Number_II/_0137_main.cpp)
add_executable(_0138_main _0138_Copy_List_with_Random_Pointer/_0138_main.cpp)
add_executable(_0139_main _0139_Word_Break/_0139_main.cpp)
add_executable(_0140_main _0140_Word_Break_II/_0140_main.cpp)
add_executable(_0190_main _0190_Reverse_Bits/_0190_main.cpp)
add_executable(_0191_main _0191_Number_of_1_Bits/_0191_main.cpp)
add_executable(_0198_main _0198_House_Robber/_0198_main.cpp)
add_executable(_0199_main _0199_Binary_Tree_Right_Side_View/_0199_main.cpp)
add_executable(_0200_main _0200_Number_of_Islands/_0200_main.cpp)
add_executable(_0201_main _0201_Bitwise_AND_of_Numbers_Range/_0201_main.cpp)
add_executable(_0202_main _0202_Happy_Number/_0202_main.cpp)
add_executable(_0203_main _0203_Remove_Linked_List_Elements/_0203_main.cpp)
add_executable(_0204_main _0204_Count_Primes/_0204_main.cpp)
add_executable(_1579_main _1579_Remove_Max_Number_of_Edges_to_Keep_Graph_Fully_Traversable/_1579_main.cpp)
add_executable(_0205_main _0205_Isomorphic_Strings/_0205_main.cpp)
add_executable(_0206_main _0206_Reverse_Linked_List/_0206_main.cpp)
add_executable(_0206_main2 _0206_Reverse_Linked_List/_0206_main2.cpp)
add_executable(_0207_main _0207_Course_Schedule/_0207_main.cpp)
add_executable(_0208_main _0208_Implement_Trie_Prefix_Tree/_0208_main.cpp)
add_executable(_0209_main _0209_Minimum_Size_Subarray_Sum/_0209_main.cpp)
add_executable(_0210_main _0210_Course_Schedule_II/_0210_main.cpp)
add_executable(_0211_main _0211_Add_and_Search_Word_Data_structure_design/_0211_main.cpp)
add_executable(_0212_main _0212_Word_Search_II/_0212_main.cpp)
add_executable(_0213_main _0213_House_Robber_II/_0213_main.cpp)
add_executable(_0724_main _0724_Find_Pivot_Index/_0724_main.cpp)
add_executable(_1631_main _1631_Path_With_Minimum_Effort/_1631_main.cpp)
add_executable(_0260_main _0260_Single_Number_III/_0260_main.cpp)
add_executable(_0263_main _0263_Ugly_Number/_0263_main.cpp)
add_executable(_0264_main _0264_Ugly_Number_II/_0264_main.cpp)
add_executable(_0268_main _0268_Missing_Number/_0268_main.cpp)
add_executable(_0273_main _0273_Integer_to_English_Words/_0273_main.cpp)
add_executable(_0274_main _0274_H_Index/_0274_main.cpp)
add_executable(_0275_main _0275_H_Index_II/_0275_main.cpp)
add_executable(_0278_main _0278_First_Bad_Version/_0278_main.cpp)
add_executable(_0279_main _0279_Perfect_Squares/_0279_main.cpp)
add_executable(_0279_main2 _0279_Perfect_Squares/_0279_main2.cpp)
add_executable(_0282_main _0282_Expression_Add_Operators/_0282_main.cpp)
add_executable(_0778_main _0778_Swim_in_Rising_Water/_0778_main.cpp)
add_executable(_0300_main _0300_Longest_Increasing_Subsequence/_0300_main.cpp)
add_executable(_0300_main2 _0300_Longest_Increasing_Subsequence/_0300_main2.cpp)
add_executable(_0283_main _0283_Move_Zeroes/_0283_main.cpp)
add_executable(_0284_main _0284_Peeking_Iterator/_0284_main.cpp)
add_executable(_0287_main _0287_Find_the_Duplicate_Number/_0287_main.cpp)
add_executable(_0289_main _0289_Game_of_Life/_0289_main.cpp)
add_executable(_0290_main _0290_Word_Pattern/_0290_main.cpp)
add_executable(_0292_main _0292_Nim_Game/_0292_main.cpp)
add_executable(_0295_main _0295_Find_Median_from_Data_Stream/_0295_main.cpp)
add_executable(_0297_main _0297_Serialize_and_Deserialize_Binary_Tree/_0297_main.cpp)
add_executable(_0299_main _0299_Bulls_and_Cows/_0299_main.cpp)
add_executable(_0839_main _0839_Similar_String_Groups/_0839_main.cpp)
add_executable(_0301_main _0301_Remove_Invalid_Parentheses/_0301_main.cpp)
add_executable(_0303_main _0303_Range_Sum_Query_Immutable/_0303_main.cpp)
add_executable(_0304_main _0304_Range_Sum_Query_2D_Immutable/_0304_main.cpp)
add_executable(_0306_main _0306_Additive_Number/_0306_main.cpp)
add_executable(_0307_main _0307_Range_Sum_Query_Mutable/_0307_main.cpp)
add_executable(_310_main _0310_Minimum_Height_Trees/_310_main.cpp)
add_executable(_0312_main _0312_Burst_Balloons/_0312_main.cpp)
add_executable(_0313_main _0313_Super_Ugly_Number/_0313_main.cpp)
add_executable(_0315_main _0315_Count_of_Smaller_Numbers_After_Self/_0315_main.cpp)
add_executable(_0888_main _0888_Fair_Candy_Swap/_0888_main.cpp)
add_executable(_0424_main _0424_Longest_Repeating_Character_Replacement/_0424_main.cpp)
add_executable(_388_main _0388_Longest_Absolute_File_Path/_388_main.cpp)
add_executable(_0389_main _0389_Find_the_Difference/_0389_main.cpp)
add_executable(0390_main _0390_Elimination_Game/0390_main.cpp)
add_executable(_0392_main _0392_Is_Subsequence/_0392_main.cpp)
add_executable(_0393_main _0393_UTF8_Validation/_0393_main.cpp)
add_executable(_0394_main _0394_Decode_String/_0394_main.cpp)
add_executable(_0395_main _0395_Longest_Substring_with_At_Least_K_Repeating_Characters/_0395_main.cpp)
add_executable(_0396_main _0396_Rotate_Function/_0396_main.cpp)
add_executable(_0397_main _0397_Integer_Replacement/_0397_main.cpp)
add_executable(_0480_main _0480_Sliding_Window_Median/_0480_main.cpp)
add_executable(_0643_main _0643_Maximum_Average_Subarray_I/_0643_main.cpp)
add_executable(_1208_main _1208_Get_Equal_Substrings_Within_Budget/_1208_main.cpp)
add_executable(_1423_main _1423_Maximum_Points_You_Can_Obtain_from_Cards/_1423_main.cpp)
add_executable(_0665_main _0665_Non_decreasing_Array/_0665_main.cpp)
add_executable(_0978_main _0978_Longest_Turbulent_Subarray/_0978_main.cpp)
add_executable(_0992_main _0992_Subarrays_with_K_Different_Integers/_0992_main.cpp)
add_executable(_0567_main _0567_Permutation_in_String/_0567_main.cpp)
add_executable(_0703_main _0703_Kth_Largest_Element_in_a_Stream/_0703_main.cpp)
add_executable(_0119_main _0119_Pascal_s_Triangle_II/_0119_main.cpp)
add_executable(_0448_main _0448_Find_All_Numbers_Disappeared_in_an_Array/_0448_main.cpp)
add_executable(_0765_main _0765_Couples_Holding_Hands/_0765_main.cpp)
add_executable(_0485_main _0485_Max_Consecutive_Ones/_0485_main.cpp)
add_executable(_0561_main _0561_Array_Partition_I/_0561_main.cpp)
add_executable(_0566_main _0566_Reshape_the_Matrix/_0566_main.cpp)
add_executable(_0995_main _0995_Minimum_Number_of_K_Consecutive_Bit_Flips/_0995_main.cpp)
add_executable(_1004_main _1004_Max_Consecutive_Ones_III/_1004_main.cpp)
add_executable(_0697_main _0697_Degree_of_an_Array/_0697_main.cpp)
add_executable(_1438_main _1438_Longest_Continuous_Subarray_With_Absolute_Diff_Less_Than_or_Equal_to_Limit/_1438_main.cpp)
add_executable(_0766_main _0766_Toeplitz_Matrix/_0766_main.cpp)
add_executable(_0316_main _0316_Remove_Duplicate_Letters/_0316_main.cpp)
add_executable(_0318_main _0318_Maximum_Product_of_Word_Lengths/_0318_main.cpp)
add_executable(_0319_main _0319_Bulb_Switcher/_0319_main.cpp)
add_executable(_0321_main _0321_Create_Maximum_Number/_0321_main.cpp)
add_executable(_0322_main _0322_Coin_Change/_0322_main.cpp)
add_executable(_0324_main _0324_Wiggle_Sort_II/_0324_main.cpp)
add_executable(_0326_main _0326_Power_of_Three/_0326_main.cpp)
add_executable(_0327_main _0327_Count_of_Range_Sum/_0327_main.cpp)
add_executable(_0328_main _0328_Odd_Even_Linked_List/_0328_main.cpp)
add_executable(_0329_main _0329_Longest_Increasing_Path_in_a_Matrix/_0329_main.cpp)
add_executable(_1052_main _1052_Grumpy_Bookstore_Owner/_1052_main.cpp)
add_executable(_0832_main _0832_Flipping_an_Image/_0832_main.cpp)
add_executable(_0867_main _0867_Transpose_Matrix/_0867_main.cpp)
add_executable(_330_main _0330_Patching_Array/_330_main.cpp)
add_executable(_0331_main _0331_Verify_Preorder_Serialization_of_a_Binary_Tree/_0331_main.cpp)
add_executable(_0332_main _0332_Reconstruct_Itinerary/_0332_main.cpp)
add_executable(_0334_main _0334_Increasing_Triplet_Subsequence/_0334_main.cpp)
add_executable(_0335_main _0335_Self_Crossing/_0335_main.cpp)
add_executable(_0336_main _0336_Palindrome_Pairs/_0336_main.cpp)
add_executable(_0337_main _0337_House_Robber_III/_0337_main.cpp)
add_executable(_0338_main _0338_Counting_Bits/_0338_main.cpp)
add_executable(_0341_main _0341_Flatten_Nested_List_Iterator/_0341_main.cpp)
add_executable(_0342_main _0342_Power_of_Four/_0342_main.cpp)
add_executable(_0231_main _0231_Power_of_Two/_0231_main.cpp)
add_executable(_1178_main _1178_Number_of_Valid_Words_for_Each_Puzzle/_1178_main.cpp)
add_executable(_1143_main _1143_Longest_Common_Subsequence/_1143_main.cpp)
add_executable(_0655_main _0655_Print_Binary_Tree/_0655_main.cpp)
add_executable(_0657_main _0657_Robot_Return_to_Origin/_0657_main.cpp)
add_executable(_0658_main _0658_Find_K_Closest_Elements/_0658_main.cpp)
add_executable(_0658_main2 _0658_Find_K_Closest_Elements/_0658_main2.cpp)
add_executable(_0659_main _0659_Split_Array_into_Consecutive_Subsequences/_0659_main.cpp)
add_executable(_0661_main _0661_Image_Smoother/_0661_main.cpp)
add_executable(_0662_main _0662_Maximum_Width_of_Binary_Tree/_0662_main.cpp)
add_executable(_0667_main _0667_Beautiful_Arrangement_II/_0667_main.cpp)
add_executable(_0668_main _0668_Kth_Smallest_Number_in_Multiplication_Table/_0668_main.cpp)
add_executable(_0896_main _0896_Monotonic_Array/_0896_main.cpp)
add_executable(_0144_main _0144_Binary_Tree_Preorder_Traversal/_0144_main.cpp)
add_executable(_0144_main2 _0144_Binary_Tree_Preorder_Traversal/_0144_main2.cpp)
add_executable(_0094_main2 _0094_Binary_Tree_Inorder_Traversal/_0094_main2.cpp)
add_executable(_0145_main _0145_Binary_Tree_Postorder_Traversal/_0145_main.cpp)
add_executable(_0145_main2 _0145_Binary_Tree_Postorder_Traversal/_0145_main2.cpp)
add_executable(_0589_main _0589_N_ary_Tree_Preorder_Traversal/_0589_main.cpp)
add_executable(_0589_main2 _0589_N_ary_Tree_Preorder_Traversal/_0589_main2.cpp)
add_executable(_0590_main _0590_N_ary_Tree_Postorder_Traversal/_0590_main.cpp)
add_executable(_0590_main2 _0590_N_ary_Tree_Postorder_Traversal/_0590_main2.cpp)
add_executable(_0429_main _0429_N_ary_Tree_Level_Order_Traversal/_0429_main.cpp)
add_executable(_0023_main _0023_Merge_k_Sorted_Lists/_0023_main.cpp)
add_executable(_0023_main2 _0023_Merge_k_Sorted_Lists/_0023_main2.cpp)
add_executable(_0673_main _0673_Number_of_Longest_Increasing_Subsequence/_0673_main.cpp)
add_executable(_0669_main _0669_Trim_a_Binary_Search_Tree/_0669_main.cpp)
add_executable(_0670_main _0670_Maximum_Swap/_0670_main.cpp)
add_executable(_0671_main _0671_Second_Minimum_Node_In_a_Binary_Tree/_0671_main.cpp)
add_executable(_0675_main _0675_Cut_Off_Trees_for_Golf_Event/_0675_main.cpp)
add_executable(_0676_main _0676_Implement_Magic_Dictionary/_0676_main.cpp)
add_executable(_0677_main _0677_Map_Sum_Pairs/_0677_main.cpp)
add_executable(_0678_main _0678_Valid_Parenthesis_String/_0678_main.cpp)
add_executable(_0354_main _0354_Russian_Doll_Envelopes/_0354_main.cpp)
add_executable(_0354_main2 _0354_Russian_Doll_Envelopes/_0354_main2.cpp)
add_executable(_0232_main _0232_Implement_Queue_using_Stacks/_0232_main.cpp)
add_executable(_0503_main _0503_Next_Greater_Element_II/_0503_main.cpp)
add_executable(_0679_main _0679_24_Game/_0679_main.cpp)
add_executable(_0680_main _0680_Valid_Palindrome_II/_0680_main.cpp)
add_executable(_0682_main _0682_Baseball_Game/_0682_main.cpp)
add_executable(_0686_main _0686_Repeated_String_Match/_0686_main.cpp)
add_executable(_1047_main _1047_Remove_All_Adjacent_Duplicates_In_String/_1047_main.cpp)
add_executable(_0224_main _0224_Basic_Calculator/_0224_main.cpp)
add_executable(_0685_main _0685_Redundant_Connection_II/_0685_main.cpp)
add_executable(_0687_main _0687_Longest_Univalue_Path/_0687_main.cpp)
add_executable(_0227_main _0227_Basic_Calculator_II/_0227_main.cpp)
add_executable(_0705_main _0705_Design_HashSet/_0705_main.cpp)
add_executable(_0025_main _0025_Reverse_Nodes_in_k_Group/_0025_main.cpp)
add_executable(_0030_main _0030_Substring_with_Concatenation_of_All_Words/_0030_main.cpp)
add_executable(_0706_main _0706_Design_HashMap/_0706_main.cpp)
add_executable(_0705_main2 _0705_Design_HashSet/_0705_main2.cpp)
add_executable(_0054_main _0054_Spiral_Matrix/_0054_main.cpp)
add_executable(_0695_main _0695_Max_Area_of_Island/_0695_main.cpp)
add_executable(_0463_main _0463_Island_Perimeter/_0463_main.cpp)
add_executable(_0059_main _0059_Spiral_Matrix_II/_0059_main.cpp)
add_executable(_0115_main _0115_Distinct_Subsequences/_0115_main.cpp)
add_executable(_0126_main _0126_Word_Ladder_II/_0126_main.cpp)
add_executable(_0127_main _0127_Word_Ladder/_0127_main.cpp)
add_executable(_1603_main _1603_Design_Parking_System/_1603_main.cpp)
add_executable(_0150_main _0150_Evaluate_Reverse_Polish_Notation/_0150_main.cpp)
add_executable(_0073_main _0073_Set_Matrix_Zeroes/_0073_main.cpp)
add_executable(_0042_main _0042_Trapping_Rain_Water/_0042_main.cpp)
add_executable(_0456_main _0456_132_Pattern/_0456_main.cpp)
add_executable(_0082_main _0082_Remove_Duplicates_from_Sorted_List_II/_0082_main.cpp)
add_executable(_0083_main _0083_Remove_Duplicates_from_Sorted_List/_0083_main.cpp)
add_executable(_0061_main _0061_Rotate_List/_0061_main.cpp)
add_executable(_0173_main _0173_Binary_Search_Tree_Iterator/_0173_main.cpp)
add_executable(_0078_main _0078_Subsets/_0078_main.cpp)
add_executable(_0090_main _0090_Subsets_II/_0090_main.cpp)
add_executable(_0074_main _0074_Search_a_2D_Matrix/_0074_main.cpp)
add_executable(_0235_main _0235_Lowest_Common_Ancestor_of_a_Binary_Search_Tree/_0235_main.cpp)
add_executable(_0236_main _0236_Lowest_Common_Ancestor_of_a_Binary_Tree/_0236_main.cpp)
add_executable(_0089_main _0089_Gray_Code/_0089_main.cpp)
add_executable(_1006_main _1006_Clumsy_Factorial/_1006_main.cpp)
add_executable(_lcp_04_main _0000_study/_leetcode/_lcp/_LCP_04_Broken_Board_Dominoes/_lcp_04_main.cpp)
add_executable(_0781_main _0781_Rabbits_in_Forest/_0781_main.cpp)
add_executable(_0407_main _0407_Trapping_Rain_Water_II/_0407_main.cpp)
add_executable(_0080_main _0080_Remove_Duplicates_from_Sorted_Array_II/_0080_main.cpp)
add_executable(_0406_main _0406_Queue_Reconstruction_by_Height/_0406_main.cpp)
add_executable(_0406_main2 _0406_Queue_Reconstruction_by_Height/_0406_main2.cpp)
add_executable(_0401_main _0401_Binary_Watch/_0401_main.cpp)
add_executable(_0081_main _0081_Search_in_Rotated_Sorted_Array_II/_0081_main.cpp)
add_executable(_0179_main _0179_Largest_Number/_0179_main.cpp)
add_executable(_0783_main _0783_Minimum_Distance_Between_BST_Nodes/_0783_main.cpp)
add_executable(_0785_main _0785_Is_Graph_Bipartite/_0785_main.cpp)
add_executable(_0087_main _0087_Scramble_String/_0087_main.cpp)
add_executable(_0087_main2 _0087_Scramble_String/_0087_main2.cpp)
add_executable(_0220_main _0220_Contains_Duplicate_III/_0220_main.cpp)
add_executable(_0168_mian _0168_Excel_Sheet_Column_Title/_0168_mian.cpp)
add_executable(_0026_main _0026_Remove_Duplicates_from_Sorted_Array/_0026_main.cpp)
add_executable(_0027_main _0027_Remove_Element/_0027_main.cpp)
add_executable(_0028_main _0028_Implement_strStr/_0028_main.cpp)
add_executable(_0028_main2 _0028_Implement_strStr/_0028_main2.cpp)
add_executable(_0402_main _0402_Remove_K_Digits/_0402_main.cpp)
add_executable(_0363_main _0363_Max_Sum_of_Rectangle_No_Larger_Than_K/_0363_main.cpp)
add_executable(_0011_main _0011_Container_With_Most_Water/_0011_main.cpp)
add_executable(_0012_main _0012_Integer_to_Roman/_0012_main.cpp)
add_executable(_0013_main _0013_Roman_to_Integer/_0013_main.cpp)
add_executable(_0014_mian _0014_Longest_Common_Prefix/_0014_mian.cpp)
add_executable(_0015_main _0015_3Sum/_0015_main.cpp)
add_executable(_0016_main _0016_3Sum_Closest/_0016_main.cpp)
add_executable(_0017_main _0017_Letter_Combinations_of_a_Phone_Number/_0017_main.cpp)
add_executable(_0018_main _0018_4Sum/_0018_main.cpp)
add_executable(_0019_main _0019_Remove_Nth_Node_From_End_of_List/_0019_main.cpp)
add_executable(_0020_main _0020_Valid_Parentheses/_0020_main.cpp)
add_executable(_0021_main _0021_Merge_Two_Sorted_Lists/_0021_main.cpp)
add_executable(_0022_main _0022_Generate_Parentheses/_0022_main.cpp)
add_executable(_0368_main _0368_Largest_Divisible_Subset/_0368_main.cpp)
add_executable(_0029_main _0029_Divide_Two_Integers/_0029_main.cpp)
add_executable(_0043_main _0043_Multiply_Strings/_0043_main.cpp)
add_executable(_0897_main _0897_Increasing_Order_Search_Tree/_0897_main.cpp)
add_executable(_0071_main _0071_Simplify_Path/_0071_main.cpp)
add_executable(_0938_main _0938_Range_Sum_of_BST/_0938_main.cpp)
add_executable(_0633_main _0633_Sum_of_Square_Numbers/_0633_main.cpp)
add_executable(_0124_main _0124_Binary_Tree_Maximum_Path_Sum/_0124_main.cpp)
add_executable(_0130_main _0130_Surrounded_Regions/_0130_main.cpp)
add_executable(_0403_main _0403_Frog_Jump/_0403_main.cpp)
add_executable(_0690_main _0690_Employee_Importance/_0690_main.cpp)
add_executable(_0554_main _0554_Brick_Wall/_0554_main.cpp)
add_executable(_0174_main _0174_Dungeon_Game/_0174_main.cpp)
add_executable(_1473_main _1473_Paint_House_III/_1473_main.cpp)
add_executable(_0214_main _0214_Shortest_Palindrome/_0214_main.cpp)
add_executable(_0223_main _0223_Rectangle_Area/_0223_main.cpp)
add_executable(_0229_main _0229_Majority_Element_II/_0229_main.cpp)
add_executable(_0230_main _0230_Kth_Smallest_Element_in_a_BST/_0230_main.cpp)
add_executable(_0233_main _0233_Number_of_Digit_One/_0233_main.cpp)
add_executable(_0241_main _0241_Different_Ways_to_Add_Parentheses/_0241_main.cpp)
add_executable(_0740_main _0740_Delete_and_Earn/_0740_main.cpp)
add_executable(_1720_main _1720_Decode_XOR_Array/_1720_main.cpp)
add_executable(_1486_main "_1486_XOR_Operation_in_an_Array/_1486_main.cpp")
add_executable(_1723_main _1723_Find_Minimum_Time_to_Finish_All_Jobs/_1723_main.cpp)
add_executable(_1482_main _1482_Minimum_Number_of_Days_to_Make_m_Bouquets/_1482_main.cpp)
add_executable(_0872_main _0872_Leaf_Similar_Trees/_0872_main.cpp)
add_executable(_0343_main _0343_Integer_Break/_0343_main.cpp)
add_executable(_1734_main _1734_Decode_XORed_Permutation/_1734_main.cpp)
add_executable(_0352_main _0352_Data_Stream_as_Disjoint_Intervals/_0352_main.cpp)
add_executable(_0355_main _0355_Design_Twitter/_0355_main.cpp)
add_executable(_1310_main _1310_XOR_Queries_of_a_Subarray/_1310_main.cpp)
add_executable(_0365_main _0365_Water_and_Jug_Problem/_0365_main.cpp)
add_executable(_0373_main _0373_Find_K_Pairs_with_Smallest_Sums/_0373_main.cpp)
add_executable(_1269_main _1269_Number_of_Ways_to_Stay_in_the_Same_Place_After_Some_Steps/_1269_main.cpp)
add_executable(_0421_main _0421_Maximum_XOR_of_Two_Numbers_in_an_Array/_0421_main.cpp)
add_executable(_0993_main _0993_Cousins_in_Binary_Tree/_0993_main.cpp)
add_executable(_1442_main _1442_Count_Triplets_That_Can_Form_Two_Arrays_of_Equal_XOR/_1442_main.cpp)
add_executable(_1738_main _1738_Find_Kth_Largest_XOR_Coordinate_Value/_1738_main.cpp)
add_executable(_0692_main _0692_Top_K_Frequent_Words/_0692_main.cpp)
add_executable(_1035_main _1035_Uncrossed_Lines/_1035_main.cpp)
add_executable(_0810_main _0810_Chalkboard_XOR_Game/_0810_main.cpp)
add_executable(_0044_main _0044_Wildcard_Matching/_0044_main.cpp)
add_executable(_0045_main _0045_Jump_Game_II/_0045_main.cpp)
add_executable(Solution _1707_Maximum_XOR_With_an_Element_From_Array/Solution.cpp)
add_executable(_0664_main _0664_Strange_Printer/_0664_main.cpp)
add_executable(_1190_main _1190_Reverse_Substrings_Between_Each_Pair_of_Parentheses/_1190_main.cpp)
add_executable(_1190_main2 _1190_Reverse_Substrings_Between_Each_Pair_of_Parentheses/_1190_main2.cpp)
add_executable(_0461_main _0461_Hamming_Distance/_0461_main.cpp)
add_executable(_0477_main _0477_Total_Hamming_Distance/_0477_main.cpp)
add_executable(_0560_main _0560_Subarray_Sum_Equals_K/_0560_main.cpp)
add_executable(_1074_main _1074_Number_of_Submatrices_That_Sum_to_Target/_1074_main.cpp)
add_executable(_0378_main _0378_Kth_Smallest_Element_in_a_Sorted_Matrix/_0378_main.cpp)
add_executable(_0380_main _0380_Insert_Delete_GetRandom_O1/_0380_main.cpp)
add_executable(_0381_main _0381_Insert_Delete_GetRandom_O1_Duplicates_allowed/_0381_main.cpp)
add_executable(_0382_main _0382_Linked_List_Random_Node/_0382_main.cpp)
add_executable(_0383_main _0383_Ransom_Note/_0383_main.cpp)
add_executable(_0384_main _0384_Shuffle_an_Array/_0384_main.cpp)
add_executable(_0385_main _0385_Mini_Parser/_0385_main.cpp)
add_executable(_0386_main _0386_Lexicographical_Numbers/_0386_main.cpp)
add_executable(_0387_main _0387_First_Unique_Character_in_a_String/_0387_main.cpp)
add_executable(_0398_main _0398_Random_Pick_Index/_0398_main.cpp)
add_executable(_0400_main _0400_Nth_Digit/_0400_main.cpp)
add_executable(_swordoffer_62_main _0000_study/_leetcode/_swordoffer/_062_lastRemaining/_swordoffer_62_main.cpp)
add_executable(_0404_main _0404_Sum_of_Left_Leaves/_0404_main.cpp)
add_executable(_0405_main _0405_Convert_a_Number_to_Hexadecimal/_0405_main.cpp)
add_executable(_0409_mian _0409_Longest_Palindrome/_0409_mian.cpp)
add_executable(_0410_main _0410_Split_Array_Largest_Sum/_0410_main.cpp)
add_executable(_0412_main _0412_Fizz_Buzz/_0412_main.cpp)
add_executable(_0413_main _0413_Arithmetic_Slices/_0413_main.cpp)
add_executable(_0414_main _0414_Third_Maximum_Number/_0414_main.cpp)
add_executable(_0415_main _0415_Add_Strings/_0415_main.cpp)
add_executable(_0416_main _0416_Partition_Equal_Subset_Sum/_0416_main.cpp)
add_executable(_0416_main2 _0416_Partition_Equal_Subset_Sum/_0416_main2.cpp)
add_executable(_0417_main _0417_Pacific_Atlantic_Water_Flow/_0417_main.cpp)
add_executable(_0419_main _0419_Battleships_in_a_Board/_0419_main.cpp)
add_executable(_0423_main _0423_Reconstruct_Original_Digits_from_English/_0423_main.cpp)
add_executable(_1744_main _1744_Can_You_Eat_Your_Favorite_Candy_on_Your_Favorite_Day/_1744_main.cpp)
add_executable(_0427_main _0427_Construct_Quad_Tree/_0427_main.cpp)
add_executable(_0430_main _0430_Flatten_a_Multilevel_Doubly_Linked_List/_0430_main.cpp)
add_executable(_0432_main _0432_All_one_Data_Structure/_0432_main.cpp)
add_executable(_0433_main _0433_Minimum_Genetic_Mutation/_0433_main.cpp)
add_executable(_434_main _0434_Number_of_Segments_in_a_String/_434_main.cpp)
add_executable(_0435_main _0435_Non_overlapping_Intervals/_0435_main.cpp)
add_executable(_0523_main _0523_Continuous_Subarray_Sum/_0523_main.cpp)
add_executable(_0436_main _0436_Find_Right_Interval/_0436_main.cpp)
add_executable(_0437_main _0437_Path_Sum_III/_0437_main.cpp)
add_executable(_0438_main _0438_Find_All_Anagrams_in_a_String/_0438_main.cpp)
add_executable(_0440_main _0440_K_th_Smallest_in_Lexicographical_Order/_0440_main.cpp)
add_executable(_0441_main _0441_Arranging_Coins/_0441_main.cpp)
add_executable(_0442_main _0442_Find_All_Duplicates_in_an_Array/_0442_main.cpp)
add_executable(_0525_main _0525_Contiguous_Array/_0525_main.cpp)
add_executable(_0446_main _0446_Arithmetic_Slices_II_Subsequence/_0446_main.cpp)
add_executable(_0443_main _0443_String_Compression/_0443_main.cpp)
add_executable(_0445_main _0445_Add_Two_Numbers_II/_0445_main.cpp)
add_executable(_0447_main _0447_Number_of_Boomerangs/_0447_main.cpp)
add_executable(_0449_main _0449_Serialize_and_Deserialize_BST/_0449_main.cpp)
add_executable(_0450_main _0450_Delete_Node_in_a_BST/_0450_main.cpp)
add_executable(_0451_main _0451_Sort_Characters_By_Frequency/_0451_main.cpp)
add_executable(_0452_main _0452_Minimum_Number_of_Arrows_to_Burst_Balloons/_0452_main.cpp)
add_executable(_0453_main _0453_Minimum_Moves_to_Equal_Array_Elements/_0453_main.cpp)
add_executable(_0454_main _0454_4Sum_II/_0454_main.cpp)
add_executable(_0455_main _0455_Assign_Cookies/_0455_main.cpp)
add_executable(_0457_main _0457_Circular_Array_Loop/_0457_main.cpp)
add_executable(_0458_main _0458_Poor_Pigs/_0458_main.cpp)
add_executable(_0459_main _0459_Repeated_Substring_Pattern/_0459_main.cpp)
add_executable(_0460_main _0460_LFU_Cache/_0460_main.cpp)
add_executable(_0462_main _0462_Minimum_Moves_to_Equal_Array_Elements_II/_0462_main.cpp)
add_executable(_0474_main _0474_Ones_and_Zeroes/_0474_main.cpp)
add_executable(_0990_main _0990_Satisfiability_of_Equality_Equations/_0990_main.cpp)
add_executable(_0494_main _0494_Target_Sum/_0494_main.cpp)
add_executable(_0494_main2 _0494_Target_Sum/_0494_main2.cpp)
add_executable(_1049_main _1049_Last_Stone_Weight_II/_1049_main.cpp)
add_executable(_1046_main _1046_Last_Stone_Weight/_1046_main.cpp)
add_executable(_0879_main _0879_Profitable_Schemes/_0879_main.cpp)